# filetemp-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: arg_defs.h  args.hpp  cmake_gen.cpp  cmake_gen.h  file_io.hpp  file_types.h  gen.cpp  gen.h  log.hpp  main.cpp
src/arg/: CMakeLists.txt  arg_basic.h  arg_def.h  args.h
